# Django-2

./: db.sqlite3  pyproject.toml
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/templates/news/: base.html  detail.html  index.html  post_news.html  update_news.html
news/templates/registration/: login.html  sign_up.html
news_project/: settings.py  urls.py
