[tool.poetry]
name = "news-project"
version = "0.1.0"
description = ""
authors = ["Darkhan15 <darkhan.tleubayev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-debug-toolbar = "^4.3.0"
djangorestframework = "^3.15.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
